# auction_viewer

./: CMakeLists.txt  README.md
examples/skeleton/: CMakeLists.txt  README.md
examples/skeleton/include/auction_viewer/: app.h  model.h  presenter.h  ui.h
examples/skeleton/src/: app.cpp  main.cpp  main_fltk.cpp  presenter.cpp  ui_console.cpp  ui_fltk.cpp
